# ChangeLog for app-forensics/rkhunter
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-forensics/rkhunter/ChangeLog,v 1.7 2004/09/19 17:19:06 kloeri Exp $

  19 Sep 2004; <kloeri@gentoo.org> rkhunter-1.1.7.ebuild:
  Stable on alpha.

  18 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

  18 Sep 2004; Jason Wever <weeve@gentoo.org> rkhunter-1.1.7.ebuild:
  Stable on sparc.

  17 Sep 2004; Aaron Walker <ka0ttic@gentoo.org> rkhunter-1.1.7.ebuild:
  Marked 1.1.7 stable on x86.

*rkhunter-1.1.8 (12 Sep 2004)

  12 Sep 2004; Aaron Walker <ka0ttic@gentoo.org> +rkhunter-1.1.8.ebuild:
  Version bump.

  12 Sep 2004; Aaron Walker <ka0ttic@gentoo.org> metadata.xml:
  Updated metadata (no-herd => forensics)

*rkhunter-1.1.6 (12 Sep 2004)

  12 Sep 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  +files/rkhunter.bash-completion, +files/rkhunter.cron,
  +rkhunter-1.1.5.ebuild, +rkhunter-1.1.6.ebuild, +rkhunter-1.1.7.ebuild:
  Moved from app-admin/rkhunter to app-forensics/rkhunter.

  11 Sep 2004; Aaron Walker <ka0ttic@gentoo.org>
  +files/rkhunter.bash-completion, rkhunter-1.1.7.ebuild:
  Added bash-completion script (please test).

  11 Sep 2004; Aaron Walker <ka0ttic@gentoo.org> metadata.xml:
  Updated metadata info.

*rkhunter-1.1.7 (29 Aug 2004)

  29 Aug 2004; <solar@gentoo.org> +rkhunter-1.1.7.ebuild:
  version bump

*rkhunter-1.1.6 (19 Aug 2004)

  19 Aug 2004; <solar@gentoo.org> -rkhunter-1.1.3.ebuild,
  -rkhunter-1.1.4.ebuild, +rkhunter-1.1.6.ebuild:
  version bump

  17 Aug 2004; <solar@gentoo.org> files/rkhunter.cron, rkhunter-1.1.4.ebuild,
  rkhunter-1.1.5.ebuild:
  marked 1.1.5 stable on x86

  15 Aug 2004; <solar@gentoo.org> rkhunter-1.1.5.ebuild:
  added doexe check_update.sh bug 60387

*rkhunter-1.1.5 (11 Aug 2004)

  11 Aug 2004; <solar@gentoo.org> rkhunter-1.1.2.ebuild,
  rkhunter-1.1.4.ebuild, rkhunter-1.1.5.ebuild: