@@ -1,12 +1,18 @@
-MD5 478997befa94816ccdb0ef4d98d28b61 rkhunter-1.1.5.ebuild 1342
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 MD5 a77850b9847f74089185a8f7b174b30a rkhunter-1.1.7.ebuild 1613
-MD5 7d5dd1996fe00559e2aaebc510f5cc37 rkhunter-1.1.6.ebuild 1343
-MD5 f0609664a926fc5b031f65a625950a34 ChangeLog 3537
+MD5 edb00685bf9b336e660dda29b95d37ea ChangeLog 3664
 MD5 f1608c19ea0727ee36b2a692b1f3470b metadata.xml 264
 MD5 7f5d9ae757aa67ec0d6fc02068d88326 rkhunter-1.1.8.ebuild 1617
 MD5 bbe8224c46ee3ddd8cea79ed4b817ae4 files/rkhunter.cron 1035
 MD5 6ffd297b11dded42095078ef68ef2fb9 files/rkhunter.bash-completion 2529
-MD5 2d65b1e87551b85f4cec0a1743734469 files/digest-rkhunter-1.1.5 66
-MD5 c183749d28050849a426ebbbbb2523a5 files/digest-rkhunter-1.1.6 66
 MD5 011c5df2094bff6d80ce80a90e530bb6 files/digest-rkhunter-1.1.7 66
 MD5 f1345147c35da8e7f1f51ede053106e6 files/digest-rkhunter-1.1.8 66
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.2.6 (GNU/Linux)
+
+iD8DBQFBTcYsEZCkKN40op4RApjRAJ49Ij1ggXG2+7y/L7sCMHydyDNeAQCfbXYO
+G/1/QD7DvlRpY5IeD/xu99k=
+=AjPI
+-----END PGP SIGNATURE-----
