@@ -1,1 +1,0 @@
-MD5 c8b8aaad07a0f440bc1af5d097ce550c rkhunter-1.1.6.tar.gz 105701
